--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@
 body {
     background: url('img/bg-desktop.webp');
     font-family: Bai Jamjuree;
-    background-color: blue;
+    background-color: #005eff;
 }
 
 #container {
